test/libsolidity/syntaxTests/literals/invalid_octal_digits.sol
contract C {
    uint y = 098;
}
// ----
// ParserError 8936: (26-27): Octal numbers not allowed.
